# kiln

./: Cargo.toml
crates/kiln-gpu/: Cargo.toml
crates/kiln-gpu/src/: bind_group.rs  compute_pipeline.rs  entry_point.rs  id.rs  instance.rs  lib.rs  pipeline.rs  render_commands.rs  render_pass.rs  render_pipeline.rs  resources.rs  sampler.rs  shader.rs  sync.rs  vertex.rs  vertex_attribute.rs
crates/kiln-gpu/src/buffer/: generic_buffer.rs  mod.rs  uniform_buffer.rs
crates/kiln-gpu/src/math/: mat.rs
crates/kiln-gpu/src/texture/: mod.rs  texture.rs  texture_format.rs  texture_storage.rs  texture_traits.rs  texture_view.rs
crates/kiln-macro/: Cargo.toml
crates/kiln-macro/src/: bindings.rs  entry_points.rs  lib.rs  path.rs  rust_type.rs  span.rs  texture.rs  vertex.rs  wgsl.rs
crates/kiln-renderer/: Cargo.toml
crates/kiln-renderer/src/: lib.rs  render_world.rs  renderer.rs
examples/: compute.rs
examples/forest/: Kiln.toml  main.wgsl  noise.wgsl
kiln-lang/: Cargo.toml
kiln-lang/src/: error.rs  lib.rs  span.rs  token.rs  token_stream.rs
src/: default_vertex.wgsl  error.rs  fragment_uniforms.wgsl  lib.rs  main.rs  manifest.rs  render.rs  shader.rs  shader_processor.rs  show.rs  window.rs
src/include/: camera.wgsl  default_vertex.wgsl  input.wgsl  post.wgsl  ray.wgsl  uniforms.wgsl
