[package]
name = "kiln-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
naga = { version = "0.8", features = ["wgsl-in"] }
proc-macro2 = "1.0"
proc-macro-crate = "1.1"
proc-macro-error = "1.0"
syn = { version = "1.0", features = ["extra-traits"] }
quote = "1.0"
